--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -2,16 +2,19 @@
 {{> post-button}}
 
 {{!-- Login button --}}
+{{#if isLoggedIn }}
+{{else}}
 <a href="/login">
     <button id="login-button"
-        class="fixed top-4 right-4 z-20 bg-black text-white text-center font-medium rounded-xl leading-none px-4 py-2 hover:scale-95">
+        class="fixed z-20 px-4 py-2 font-medium leading-none text-center text-white bg-black top-4 right-4 rounded-xl hover:scale-95">
         Log in
     </button>
 </a>
+{{/if}}
 
 {{!-- All/Following Options --}}
 <div id="options"
-    class="fixed z-10 top-0 left-1/2 -translate-x-1/2 w-full md:w-1/2 flex justify-center md:py-1 pt-14 md:bg-lotion bg-white dark:md:bg-vampire-black dark:bg-eerie-black">
+    class="fixed top-0 z-10 flex justify-center w-full -translate-x-1/2 bg-white left-1/2 md:w-1/2 md:py-1 pt-14 md:bg-lotion dark:md:bg-vampire-black dark:bg-eerie-black">
     <div class="w-1/2 md:w-[320px] md:min-w-[320px] md:rounded-xl py-4 text-center font-medium cursor-pointer border-b-2 border-black md:border-none md:hover:bg-gray-200"
         id="all">All</div>
     <div class="w-1/2 md:w-[320px] md:min-w-[320px] md:rounded-xl py-4 text-center font-medium cursor-pointer border-b-2 border-black opacity-40 md:border-none md:hover:bg-gray-200"
@@ -19,29 +22,29 @@
 </div>
 
 {{!-- Main container --}}
-<div class="main-container mt-10 flex justify-center h-screen overflow-hidden">
+<div class="flex justify-center h-screen mt-10 overflow-hidden main-container">
     <div id="feeds"
         class="shadow-lg bg-white dark:bg-eerie-black w-full h-full md:w-[640px] border-light-gray dark:border-charleston-green border rounded-t-3xl overflow-y-auto md:mt-6 mt-16 pb-36 md:pb-10"
         style="scrollbar-width: none;">
-        <div class="p-4 md:flex items-center hidden relative" id="question">
+        <div class="relative items-center hidden p-4 md:flex" id="question">
             <div class="basis-1/12 min-w-10">
                 <a href="/profile"><img class="rounded-full" src="/images/avatar.jpg" alt="Avatar"></a>
             </div>
-            <span class="opacity-40 leading-none p-4 cursor-pointer" onclick="createNewThread()">How are you
+            <span class="p-4 leading-none cursor-pointer opacity-40" onclick="createNewThread()">How are you
                 today?</span>
             <button
-                class="absolute right-4 bg-white dark:bg-eerie-black text-center font-medium rounded-xl px-4 py-2 hover:scale-95 border border-light-gray dark:border-charleston-green leading-none"
+                class="absolute px-4 py-2 font-medium leading-none text-center bg-white border right-4 dark:bg-eerie-black rounded-xl hover:scale-95 border-light-gray dark:border-charleston-green"
                 onclick="createNewThread()">Post
             </button>
         </div>
 
-        <div class="p-4 pb-1 flex border-t border-light-gray dark:border-charleston-green" id="thread1">
+        <div class="flex p-4 pb-1 border-t border-light-gray dark:border-charleston-green" id="thread1">
             <a href=""></a>
             <div class="basis-1/12 min-w-10" id="thread-avatar">
                 <a href="./other-profile.html?userId=1"><img class="rounded-full" src="/images/avatar.jpg"
                         alt="Avatar"></a>
             </div>
-            <div class="basis-11/12 px-4">
+            <div class="px-4 basis-11/12">
                 <div class="flex gap-2">
                     <div class="font-medium hover:underline">
                         <a href="./other-profile.html?userId=1">nhatminh.22clc</a>
@@ -65,19 +68,19 @@
                         <span>10</span>
                     </div>
                     <div class="rounded-3xl hover:bg-[#f0f0f0] cursor-pointer px-3 py-2">
-                        <i class="fa-regular fa-comment cursor-pointer"></i>
+                        <i class="cursor-pointer fa-regular fa-comment"></i>
                         <span class="leading-none">1</span>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="p-4 pb-1 flex border-t border-light-gray dark:border-charleston-green" id="thread2">
+        <div class="flex p-4 pb-1 border-t border-light-gray dark:border-charleston-green" id="thread2">
             <div class="basis-1/12 min-w-10" id="thread-avatar">
                 <a href="./other-profile.html?userId=2"><img class="rounded-full" src="./images/avatar.jpg"
                         alt="Avatar"></a>
             </div>
-            <div class="basis-11/12 px-4">
+            <div class="px-4 basis-11/12">
                 <div class="flex gap-2">
                     <div class="font-medium hover:underline">
                         <a href="./other-profile.html?userId=2">vanminh.22clc</a>
@@ -101,19 +104,19 @@
                         <span>10</span>
                     </div>
                     <div class="rounded-3xl hover:bg-[#f0f0f0] cursor-pointer px-3 py-2">
-                        <i class="fa-regular fa-comment cursor-pointer"></i>
+                        <i class="cursor-pointer fa-regular fa-comment"></i>
                         <span class="leading-none">1</span>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="p-4 pb-1 flex border-t border-light-gray dark:border-charleston-green" id="thread3">
+        <div class="flex p-4 pb-1 border-t border-light-gray dark:border-charleston-green" id="thread3">
             <div class="basis-1/12 min-w-10" id="thread-avatar">
                 <a href="./other-profile.html?userId=3"><img class="rounded-full" src="./images/avatar.jpg"
                         alt="Avatar"></a>
             </div>
-            <div class="basis-11/12 px-4">
+            <div class="px-4 basis-11/12">
                 <div class="flex gap-2">
                     <div class="font-medium hover:underline">
                         <a href="./other-profile.html?userId=3">thanhnam.22clc</a>
@@ -137,19 +140,19 @@
                         <span>10</span>
                     </div>
                     <div class="rounded-3xl hover:bg-[#f0f0f0] cursor-pointer px-3 py-2">
-                        <i class="fa-regular fa-comment cursor-pointer"></i>
+                        <i class="cursor-pointer fa-regular fa-comment"></i>
                         <span class="leading-none">1</span>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="p-4 pb-1 flex border-t border-light-gray dark:border-charleston-green" id="thread4">
+        <div class="flex p-4 pb-1 border-t border-light-gray dark:border-charleston-green" id="thread4">
             <div class="basis-1/12 min-w-10" id="thread-avatar">
                 <a href="./other-profile.html?userId=4"></a><img class="rounded-full" src="./images/avatar.jpg"
                     alt="Avatar">
             </div>
-            <div class="basis-11/12 px-4">
+            <div class="px-4 basis-11/12">
                 <div class="flex gap-2">
                     <div class="font-medium hover:underline">
                         <a href="./other-profile.html?userId=4">_trustmebro_</a>
@@ -170,7 +173,7 @@
                         <span>10</span>
                     </div>
                     <div class="rounded-3xl hover:bg-[#f0f0f0] cursor-pointer px-3 py-2">
-                        <i class="fa-regular fa-comment cursor-pointer"></i>
+                        <i class="cursor-pointer fa-regular fa-comment"></i>
                         <span class="leading-none">1</span>
                     </div>
                 </div>
@@ -183,16 +186,16 @@
 <div id="comment-overlay"
     class="bg-[#030303] bg-opacity-50 w-screen h-screen fixed z-20 justify-center place-items-center hidden">
     <div class="w-full md:max-w-[600px] h-full md:max-h-[50vh] bg-white md:rounded-xl relative" id="comment-container">
-        <div class="text-center font-bold p-4 border-b border-gray-300 relative">Reply
-            <button class="absolute left-4 font-normal p-1 leading-none" onclick="exitComment()">Cancel</button>
+        <div class="relative p-4 font-bold text-center border-b border-gray-300">Reply
+            <button class="absolute p-1 font-normal leading-none left-4" onclick="exitComment()">Cancel</button>
         </div>
 
-        <div class="p-4 flex h-3/4">
-            <div class="basis-1/12 min-w-10 bg-white">
+        <div class="flex p-4 h-3/4">
+            <div class="bg-white basis-1/12 min-w-10">
                 <img class="rounded-full" src="./images/avatar.jpg" alt="Avatar">
             </div>
 
-            <div class="basis-11/12 pl-4 bg-white flex flex-col">
+            <div class="flex flex-col pl-4 bg-white basis-11/12">
                 <div class="font-medium">
                     nhatminh.22clc
                 </div>
@@ -202,7 +205,7 @@
         </div>
 
         <button
-            class="absolute right-6 bottom-4 bg-black text-white text-center font-medium rounded-xl px-6 py-2 hover:scale-95 border border-gray-300 leading-none">Post</button>
+            class="absolute px-6 py-2 font-medium leading-none text-center text-white bg-black border border-gray-300 right-6 bottom-4 rounded-xl hover:scale-95">Post</button>
     </div>
 </div>
 
