--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -9,13 +9,13 @@
         <form action="/login" class="flex flex-col gap-2" id="login-from" method="POST" >
             <!-- Email Input -->
             <div>
-                <label for="usernameOrEmail" class="sr-only">Username or email</label>
+                <label for="emailOrUsername" class="sr-only">Username or email</label>
                 <input 
                     type="text" 
-                    id="usernameOrEmail"
+                    id="emailOrUsername"
                     class="form-control bg-[#F5F5F5] w-full p-4 outline-none rounded-xl" 
-                    name="usernameOrEmail" 
-                    placeholder="Username or email" 
+                    name="emailOrUsername" 
+                    placeholder="Email or username" 
                     required
                 >
             </div>
@@ -71,4 +71,31 @@
     </div>
 </div>
 
-<script src="/js/login.js"></script>
+<script>
+    document.querySelectorAll('.form-control').forEach(input => {
+        input.addEventListener('focus', () => {
+            input.classList.add('border', 'border-gray-300');
+        });
+        input.addEventListener('blur', () => {
+            input.classList.remove('border', 'border-gray-300');
+        });
+    });
+
+    document.querySelectorAll('.form-control').forEach(input => {
+        input.addEventListener('input', () => {
+            const allFilled = Array.from(document.querySelectorAll('.form-control')).every(input => input.value);
+            if (allFilled) {
+                document.getElementById('login-button').classList.remove('text-opacity-40');
+            } else {
+                document.getElementById('login-button').classList.add('text-opacity-40');
+            }
+        });
+    });
+
+    function process(e){
+        e.preventDefault();
+        window.location.href = '/';
+        return false;
+    }
+
+</script>
