--- a/src/views/signup2.hbs
+++ b/src/views/signup2.hbs
@@ -46,4 +46,30 @@
     </div>
 </div>
 
-<script src="/js/signup2.js"></script>
+<script>
+    document.querySelectorAll('.form-control').forEach(input => {
+        input.addEventListener('focus', () => {
+            input.classList.add('border', 'border-gray-300');
+        });
+        input.addEventListener('blur', () => {
+            input.classList.remove('border', 'border-gray-300');
+        });
+    });
+
+    document.querySelectorAll('.form-control').forEach(input => {
+        input.addEventListener('input', () => {
+            const allFilled = Array.from(document.querySelectorAll('.form-control')).every(input => input.value);
+            if (allFilled) {
+                document.getElementById('submit-button').classList.remove('text-opacity-40');
+            } else {
+                document.getElementById('submit-button').classList.add('text-opacity-40');
+            }
+        });
+    });
+
+    function process(e){
+        e.preventDefault();
+        window.location.href = '/';
+        return false;
+    }
+</script>
