--- a/src/views/noti.hbs
+++ b/src/views/noti.hbs
@@ -1,5 +1,6 @@
 {{> navbar}}
 {{> post-button}}
+{{> login-button}}
 
 <div id="header"
     class="fixed z-10 left-1/2 -translate-x-1/2 w-full md:w-[640px] text-center md:pt-5 pt-16 md:bg-[#fafafa] text-[15px] font-semibold md:block hidden">
@@ -10,159 +11,29 @@
     <div id="notifications-list"
         class="shadow-lg bg-[#ffffff] w-full h-full md:w-[640px] border-[#d6d6d6] border md:rounded-t-3xl overflow-y-auto md:mt-[10px] mt-12 pb-32 md:pb-10"
         style="scrollbar-width: none;">
-        <div class="p-4 flex relative">
+        {{#each noti}}
+        <div class="p-4 flex relative" notiId="{{id}}">
             <div class="basis-1/12 min-w-10 bg-white" id="thread-avatar">
-                <a href="./other-profile.html?userId=1"><img class="rounded-full" src="/images/avatar.jpg"
+                <a href="/@{{from.username}}"><img class="rounded-full" src="{{from.avatarUrl}}"
                         alt="Avatar"></a>
             </div>
             <div class="basis-11/12 px-4 bg-white">
                 <div class="flex flex-col">
                     <div class="flex gap-1">
-                        <span class="font-medium">nhatminh.22clc</span>
-                        <p> has followed you.</p>
+                        <a class="hover:underline" href="/@{{from.username}}"><span class="font-medium">{{from.username}}</span></a>
+                        <p>{{message}}</p>
                     </div>
-                    <span class="text-[#74C0FC] font-bold text-sm time">
-                        2h
+                    <span class="{{#if isRead}}text-gray-400{{else}}text-[#74C0FC] font-bold {{/if}} text-sm time">
+                        {{getDifTime createdAt}}
                     </span>
                 </div>
             </div>
             <i class="noti-options-icon fa-solid fa-ellipsis cursor-pointer"></i>
-            <i class="fa-solid fa-circle fa-sm absolute bottom-4 right-4" style="color: #74C0FC;"></i>
+            {{#if isRead}} {{else}}
+            <i class="fa-solid fa-circle fa-sm absolute bottom-4 right-4 text-[#74C0FC]"></i>
+            {{/if}}
         </div>
-
-        <div class="p-4 flex border-t border-[#d6d6d6] relative">
-            <div class="basis-1/12 min-w-10 bg-white" id="thread-avatar">
-                <a href="./other-profile.html?userId=1"><img class="rounded-full" src="/images/avatar.jpg"
-                        alt="Avatar"></a>
-            </div>
-            <div class="basis-11/12 px-4 bg-white">
-                <div class="flex flex-col">
-                    <div class="flex gap-1">
-                        <span class="font-medium">ABC</span>
-                        <p> just liked your thread.</p>
-                    </div>
-                    <span class="text-[#74C0FC] font-bold text-sm time">
-                        3h
-                    </span>
-                </div>
-            </div>
-            <i class="noti-options-icon fa-solid fa-ellipsis cursor-pointer"></i>
-            <i class="fa-solid fa-circle fa-sm absolute bottom-4 right-4" style="color: #74C0FC;"></i>
-        </div>
-
-        <div class="p-4 flex border-t border-[#d6d6d6]">
-            <div class="basis-1/12 min-w-10 bg-white" id="thread-avatar">
-                <a href="./other-profile.html?userId=1"><img class="rounded-full" src="/images/avatar.jpg"
-                        alt="Avatar"></a>
-            </div>
-            <div class="basis-11/12 px-4 bg-white">
-                <div class="flex flex-col">
-                    <div class="flex gap-1">
-                        <span class="font-medium">ABC</span>
-                        <p> just liked your thread.</p>
-                    </div>
-                    <span class="text-gray-400 text-sm time">
-                        3h
-                    </span>
-                </div>
-            </div>
-            <i class="noti-options-icon fa-solid fa-ellipsis cursor-pointer"></i>
-        </div>
-
-        <div class="p-4 flex border-t border-[#d6d6d6]">
-            <div class="basis-1/12 min-w-10 bg-white" id="thread-avatar">
-                <a href="./other-profile.html?userId=1"><img class="rounded-full" src="/images/avatar.jpg"
-                        alt="Avatar"></a>
-            </div>
-            <div class="basis-11/12 px-4 bg-white">
-                <div class="flex flex-col">
-                    <div class="flex gap-1">
-                        <span class="font-medium">ABC</span>
-                        <p> just liked your thread.</p>
-                    </div>
-                    <span class="text-gray-400 text-sm time">
-                        3h
-                    </span>
-                </div>
-            </div>
-            <i class="noti-options-icon fa-solid fa-ellipsis cursor-pointer"></i>
-        </div>
-
-        <div class="p-4 flex border-t border-[#d6d6d6]">
-            <div class="basis-1/12 min-w-10 bg-white" id="thread-avatar">
-                <a href="./other-profile.html?userId=1"><img class="rounded-full" src="/images/avatar.jpg"
-                        alt="Avatar"></a>
-            </div>
-            <div class="basis-11/12 px-4 bg-white">
-                <div class="flex flex-col">
-                    <div class="flex gap-1">
-                        <span class="font-medium">ABC</span>
-                        <p> just liked your thread.</p>
-                    </div>
-                    <span class="text-gray-400 text-sm time">
-                        3h
-                    </span>
-                </div>
-            </div>
-            <i class="noti-options-icon fa-solid fa-ellipsis cursor-pointer"></i>
-        </div>
-
-        <div class="p-4 flex border-t border-[#d6d6d6]">
-            <div class="basis-1/12 min-w-10 bg-white" id="thread-avatar">
-                <a href="./other-profile.html?userId=1"><img class="rounded-full" src="/images/avatar.jpg"
-                        alt="Avatar"></a>
-            </div>
-            <div class="basis-11/12 px-4 bg-white">
-                <div class="flex flex-col">
-                    <div class="flex gap-1">
-                        <span class="font-medium">ABC</span>
-                        <p> just liked your thread.</p>
-                    </div>
-                    <span class="text-gray-400 text-sm time">
-                        3h
-                    </span>
-                </div>
-            </div>
-            <i class="noti-options-icon fa-solid fa-ellipsis cursor-pointer"></i>
-        </div>
-
-        <div class="p-4 flex border-t border-[#d6d6d6]">
-            <div class="basis-1/12 min-w-10 bg-white" id="thread-avatar">
-                <a href="./other-profile.html?userId=1"><img class="rounded-full" src="/images/avatar.jpg"
-                        alt="Avatar"></a>
-            </div>
-            <div class="basis-11/12 px-4 bg-white">
-                <div class="flex flex-col">
-                    <div class="flex gap-1">
-                        <span class="font-medium">ABC</span>
-                        <p> just liked your thread.</p>
-                    </div>
-                    <span class="text-gray-400 text-sm time">
-                        3h
-                    </span>
-                </div>
-            </div>
-            <i class="noti-options-icon fa-solid fa-ellipsis cursor-pointer"></i>
-        </div>
-
-        <div class="p-4 flex border-t border-[#d6d6d6]">
-            <div class="basis-1/12 min-w-10 bg-white" id="thread-avatar">
-                <a href="./other-profile.html?userId=1"><img class="rounded-full" src="/images/avatar.jpg"
-                        alt="Avatar"></a>
-            </div>
-            <div class="basis-11/12 px-4 bg-white">
-                <div class="flex flex-col">
-                    <div class="flex gap-1">
-                        <span class="font-medium">ABC</span>
-                        <p> just liked your thread.</p>
-                    </div>
-                    <span class="text-gray-400 text-sm time">
-                        3h
-                    </span>
-                </div>
-            </div>
-            <i class="noti-options-icon fa-solid fa-ellipsis cursor-pointer"></i>
-        </div>
+        {{/each}}
     </div>
 </div>
 
@@ -184,6 +55,15 @@
                 element.parentElement.querySelector('.fa-circle').remove();
                 element.parentElement.querySelector('.time').classList.remove('text-[#74C0FC]', 'font-bold');
                 element.parentElement.querySelector('.time').classList.add('text-gray-400');
+                fetch('/notifications/mark-as-read', {
+                    method: 'PUT',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({
+                        notiId: element.parentElement.getAttribute('notiId'),
+                    }),
+                });
             });
 
             const deleteOption = document.createElement('div');
@@ -192,6 +72,15 @@
             deleteOption.addEventListener('click', () => {
                 element.parentElement.style.display = 'none';
                 popup.remove();
+                fetch('/notifications/delete', {
+                    method: 'DELETE',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({
+                        notiId: element.parentElement.getAttribute('notiId'),
+                    }),
+                });
             });
 
             popup.appendChild(markAsRead);
@@ -202,7 +91,7 @@
                 if (!popup.contains(event.target) && event.target !== element) {
                     popup.remove();
                 }
-            }, { once: true });
+            });
         });
     });
 </script>
