--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -40,7 +40,7 @@
             </button>
             {{#if loginMessage}}
                 <div>
-                    <div class="alert alert-warning">{{loginMessage}}</div>
+                    <div class="text-red-600">{{loginMessage}}</div>
                 </div>
             {{/if}}
         </form>
