--- a/src/views/signup.hbs
+++ b/src/views/signup.hbs
@@ -5,28 +5,41 @@
         <!-- Heading -->
         <h1 class="mb-4 text-xl font-bold">Sign up</h1>
         <!-- Form -->
-        <form id="signupForm" class="flex flex-col gap-2" method="POST" action="/signup" onsubmit="return process(event)">
+        <form id="signup-form" class="flex flex-col gap-2" action="/signup" method="POST"
+            >
             <!-- Email input -->
             <div>
                 <label for="email" class="sr-only">Email</label>
-                <input type="email" id="email" class="form-control bg-[#F5F5F5] w-full p-4 outline-none rounded-xl" name="email" placeholder="Email" required>
+                <input type="email" id="email" class="form-control bg-[#F5F5F5] w-full p-4 outline-none rounded-xl"
+                    name="email" placeholder="Email" required>
+                <small id="email-error" class="hidden block text-left text-red-600" style="text-indent: 1rem;"></small>
             </div>
-        
+
             <!-- Username input -->
             <div>
                 <label for="username" class="sr-only">Username</label>
-                <input type="text" id="username" class="form-control bg-[#F5F5F5] w-full p-4 outline-none rounded-xl" name="username" placeholder="Username" required>
-                <small id="username-error" class="hidden text-red-500">Username must be unique and follow the rules!</small>
+                <input type="text" id="username" class="form-control bg-[#F5F5F5] w-full p-4 outline-none rounded-xl"
+                    name="username" placeholder="Username" required>
+                <small id="username-error" class="hidden block text-left text-red-600" style="text-indent: 1rem;"></small>
             </div>
-        
+
             <!-- Password Input -->
             <div>
                 <label for="password" class="sr-only">Password</label>
-                <input type="password" id="password" class="form-control bg-[#F5F5F5] w-full p-4 outline-none rounded-xl" name="password" placeholder="Password" required>
+                <input type="password" id="password"
+                    class="form-control bg-[#F5F5F5] w-full p-4 outline-none rounded-xl" name="password"
+                    placeholder="Password" required>
+                <small id="password-error" class="hidden block text-left text-red-600" style="text-indent: 1rem;"></small>
             </div>
-        
+            {{#if signupMessage}}
+            <div class="flex justify-start">
+                <small class="text-left text-red-600" style="text-indent: 1rem;">{{signupMessage}}</small>
+            </div>   
+            {{/if}}
+
             <!-- Submit Button -->
-            <button id="signupBtn" type="submit" class="w-full p-4 font-medium text-white bg-black text-opacity-40 rounded-2xl">
+            <button id="signup-button" type="submit"
+                class="w-full p-4 font-medium text-white bg-black text-opacity-40 rounded-2xl">
                 Sign up
             </button>
         </form>
@@ -37,8 +50,8 @@
             <hr class="flex-grow">
         </div>
 
-        <button id="loginBtn" type="button" class="w-full p-4 font-medium text-white bg-black rounded-2xl" 
-        onclick="window.location.href='/login'">
+        <button id="loginBtn" type="button" class="w-full p-4 font-medium text-white bg-black rounded-2xl"
+            onclick="window.location.href='/login'">
             Log in
         </button>
     </div>
