PV Minh: update check validate in server for login, signup

--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -26,7 +26,7 @@
 
             {{#if loginMessage}}
             <div class="flex justify-start">
-                <small class="text-left text-red-600" style="text-indent: 1rem;">{{loginMessage}}</small>
+                <small class="text-left text-red-600" style="text-indent: 1rem;">{{{loginMessage}}}</small>
             </div>   
             {{/if}}
             <!-- Submit Button -->
