--- a/src/views/signup.hbs
+++ b/src/views/signup.hbs
@@ -33,7 +33,7 @@
             </div>
             {{#if signupMessage}}
             <div class="flex justify-start">
-                <small class="text-left text-red-600" style="text-indent: 1rem;">{{signupMessage}}</small>
+                <small class="text-left text-red-600" style="text-indent: 1rem;">{{{signupMessage}}}</small>
             </div>   
             {{/if}}
 
